Retry with self attach